build/log/idf_py_stdout_output_200177
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/kvhnuke/Github/esp32/build/bootloader/esp-idf/esptool_py && /home/kvhnuke/.espressif/python_env/idf5.2_py3.10_env/bin/python /home/kvhnuke/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/kvhnuke/Github/esp32/build/bootloader/bootloader.bin
Bootloader binary size 0x52c0 bytes. 0x2d40 bytes (35%) free.
[2/7] Building C object esp-idf/usb/CMakeFiles/__idf_usb.dir/usbh.c.obj
FAILED: esp-idf/usb/CMakeFiles/__idf_usb.dir/usbh.c.obj 
/home/kvhnuke/.espressif/tools/xtensa-esp32s3-elf/esp-12.2.0_20230208/xtensa-esp32s3-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.2-dev-2164-g3befd5fff7\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/kvhnuke/Github/esp32/build/config -I/home/kvhnuke/esp/esp-idf/components/usb/include -I/home/kvhnuke/esp/esp-idf/components/usb/private_include -I/home/kvhnuke/esp/esp-idf/components/newlib/platform_include -I/home/kvhnuke/esp/esp-idf/components/freertos/config/include -I/home/kvhnuke/esp/esp-idf/components/freertos/config/include/freertos -I/home/kvhnuke/esp/esp-idf/components/freertos/config/xtensa/include -I/home/kvhnuke/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/kvhnuke/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/kvhnuke/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/kvhnuke/esp/esp-idf/components/freertos/esp_additions/include -I/home/kvhnuke/esp/esp-idf/components/esp_hw_support/include -I/home/kvhnuke/esp/esp-idf/components/esp_hw_support/include/soc -I/home/kvhnuke/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/home/kvhnuke/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/home/kvhnuke/esp/esp-idf/components/esp_hw_support/port/esp32s3/private_include -I/home/kvhnuke/esp/esp-idf/components/heap/include -I/home/kvhnuke/esp/esp-idf/components/log/include -I/home/kvhnuke/esp/esp-idf/components/soc/include -I/home/kvhnuke/esp/esp-idf/components/soc/esp32s3 -I/home/kvhnuke/esp/esp-idf/components/soc/esp32s3/include -I/home/kvhnuke/esp/esp-idf/components/hal/esp32s3/include -I/home/kvhnuke/esp/esp-idf/components/hal/include -I/home/kvhnuke/esp/esp-idf/components/hal/platform_port/include -I/home/kvhnuke/esp/esp-idf/components/esp_rom/include -I/home/kvhnuke/esp/esp-idf/components/esp_rom/include/esp32s3 -I/home/kvhnuke/esp/esp-idf/components/esp_rom/esp32s3 -I/home/kvhnuke/esp/esp-idf/components/esp_common/include -I/home/kvhnuke/esp/esp-idf/components/esp_system/include -I/home/kvhnuke/esp/esp-idf/components/esp_system/port/soc -I/home/kvhnuke/esp/esp-idf/components/esp_system/port/include/private -I/home/kvhnuke/esp/esp-idf/components/xtensa/esp32s3/include -I/home/kvhnuke/esp/esp-idf/components/xtensa/include -I/home/kvhnuke/esp/esp-idf/components/xtensa/deprecated_include -I/home/kvhnuke/esp/esp-idf/components/lwip/include -I/home/kvhnuke/esp/esp-idf/components/lwip/include/apps -I/home/kvhnuke/esp/esp-idf/components/lwip/include/apps/sntp -I/home/kvhnuke/esp/esp-idf/components/lwip/lwip/src/include -I/home/kvhnuke/esp/esp-idf/components/lwip/port/include -I/home/kvhnuke/esp/esp-idf/components/lwip/port/freertos/include -I/home/kvhnuke/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/kvhnuke/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/kvhnuke/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/kvhnuke/esp/esp-idf/components/driver/include -I/home/kvhnuke/esp/esp-idf/components/driver/deprecated -I/home/kvhnuke/esp/esp-idf/components/driver/analog_comparator/include -I/home/kvhnuke/esp/esp-idf/components/driver/dac/include -I/home/kvhnuke/esp/esp-idf/components/driver/gpio/include -I/home/kvhnuke/esp/esp-idf/components/driver/gptimer/include -I/home/kvhnuke/esp/esp-idf/components/driver/i2c/include -I/home/kvhnuke/esp/esp-idf/components/driver/i2s/include -I/home/kvhnuke/esp/esp-idf/components/driver/ledc/include -I/home/kvhnuke/esp/esp-idf/components/driver/mcpwm/include -I/home/kvhnuke/esp/esp-idf/components/driver/parlio/include -I/home/kvhnuke/esp/esp-idf/components/driver/pcnt/include -I/home/kvhnuke/esp/esp-idf/components/driver/rmt/include -I/home/kvhnuke/esp/esp-idf/components/driver/sdio_slave/include -I/home/kvhnuke/esp/esp-idf/components/driver/sdmmc/include -I/home/kvhnuke/esp/esp-idf/components/driver/sigma_delta/include -I/home/kvhnuke/esp/esp-idf/components/driver/spi/include -I/home/kvhnuke/esp/esp-idf/components/driver/temperature_sensor/include -I/home/kvhnuke/esp/esp-idf/components/driver/touch_sensor/include -I/home/kvhnuke/esp/esp-idf/components/driver/twai/include -I/home/kvhnuke/esp/esp-idf/components/driver/uart/include -I/home/kvhnuke/esp/esp-idf/components/driver/usb_serial_jtag/include -I/home/kvhnuke/esp/esp-idf/components/driver/touch_sensor/esp32s3/include -I/home/kvhnuke/esp/esp-idf/components/esp_pm/include -I/home/kvhnuke/esp/esp-idf/components/esp_ringbuf/include -mlongcalls  -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/kvhnuke/Github/esp32=. -fmacro-prefix-map=/home/kvhnuke/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/usb/CMakeFiles/__idf_usb.dir/usbh.c.obj -MF esp-idf/usb/CMakeFiles/__idf_usb.dir/usbh.c.obj.d -o esp-idf/usb/CMakeFiles/__idf_usb.dir/usbh.c.obj -c /home/kvhnuke/esp/esp-idf/components/usb/usbh.c
/home/kvhnuke/esp/esp-idf/components/usb/usbh.c: In function 'get_ep_from_addr':
/home/kvhnuke/esp/esp-idf/components/usb/usbh.c:194:12: error: too many arguments for format [-Werror=format-extra-args]
  194 |     printf("usb endpoint index", index);
      |            ^~~~~~~~~~~~~~~~~~~~
cc1: some warnings being treated as errors
ninja: build stopped: subcommand failed.
